save the new data frame

--- a/CTCF_Bumpers.ipynb
+++ b/CTCF_Bumpers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "d4f87768",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "2454a7e5",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "773e26bf",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        "4  chr1  9867375  9867874"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "8eeabe52",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "b373a4ae",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "27222405",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "Int64Index([0, 1, 2], dtype='int64')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "9d976e51",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "85dd754a",
    "metadata": {
     "scrolled": true
@@ -266,7 +266,7 @@
        "4  chr1  7867375  11867874"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "1ea2dd0b",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "b64e4915",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
        "4  chr1  7867375  11867874"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,11 @@
    "id": "386490ad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save the new dataframe \n",
+    "df = pd.DataFrame(chrom_file)\n",
+    "df.to_csv('chrom_file.csv', encoding='utf-8', index = False, header= None)"
+   ]
   },
   {
    "cell_type": "code",
